...
                          cursorColor: isSubmitting
                              ? AppColor.feralFileMediumGrey
                              : AppColor.white,
                          decoration: InputDecoration(
                            isCollapsed: true,
                            border: InputBorder.none,
                            hintText: 'Address or ENS / Tezos domain',
                            hintStyle: AppTypography.body(context).white,
                          ),
                          onSubmitted: (_) => _handleVerifyAddress(),
                          onChanged: (_) {
                            setState(() {});
                            if (addAddressFlowState.hasError) {
...
            Positioned(
              bottom: LayoutConstants.space4 + bottomInset,
              left: 0,
              right: 0,
              child: PrimaryButton(
                key: GoldPathPatrolKeys.onboardingAddAddressSubmit,
                text: 'Submit',
                color: PrimitivesTokens.colorsWhite,
                onTap: isSubmitEnabled ? _handleVerifyAddress : null,
                isProcessing: isSubmitting,
                enabled: isSubmitEnabled,
              ),
            ),
...
